Changes to appearance.

--- a/app/style.css
+++ b/app/style.css
@@ -24,8 +24,10 @@ canvas {
     position: absolute;
 }
 
-#panel {
-    position: absolute;
+.panel {
+    border: 1px solid black;
+    padding: 10px;
+    position: relative;
     top: 50px;
     left: 1em;
     width: 100px;
