--- a/app/style.css
+++ b/app/style.css
@@ -4,18 +4,26 @@ html, body {
     margin: 0;
     padding: 0;
     border: 0;
+    font-size: 12px;
     position: relative;
 
     /* No scroll bars */
     overflow: hidden;
 }
 
-h1 {
-    font-size: 1.5em;
+hgroup {
     margin: 0;
     position: absolute;
     top: .5em;
-    left: .5em;
+    left: 1em;
+    line-height: 0.5em;
+}
+
+h1 {
+    font-size: 1.5em;
+}
+h2 {
+    font-size: 0.8em;
 }
 
 canvas {
@@ -23,13 +31,16 @@ canvas {
     position: absolute;
 }
 
+#panels {
+    top: 5em;
+    left: 1em;
+    position: absolute;
+    width: 10%;
+}
+
 .panel {
     border: 1px solid black;
     padding: 10px;
-    position: relative;
-    top: 50px;
-    left: 1em;
-    width: 100px;
     background-color: white;
 }
 
