--- a/app/style.css
+++ b/app/style.css
@@ -42,6 +42,12 @@ canvas {
     width: 10%;
 }
 
+#input-window {
+    position: absolute;
+    bottom: 1em;
+    left: 1em;
+}
+
 .panel {
     border: 1px solid black;
     padding: 10px;
