#display no longer has any padding so that it does not to be hidden from user.

--- a/app/style.css
+++ b/app/style.css
@@ -57,9 +57,12 @@ canvas {
 }
 
 .panel {
+    background-color: white;
+}
+
+#controls, .atom-display {
     border: 1px solid black;
     padding: 10px;
-    background-color: white;
 }
 
 #atom-display h3 {
