--- a/app/style.css
+++ b/app/style.css
@@ -14,8 +14,8 @@ html, body {
 hgroup {
     margin: 0;
     position: absolute;
-    top: 1.5em;
-    left: 1em;
+    bottom: 1.5em;
+    right: 2em;
     line-height: 0.5em;
 }
 
@@ -35,8 +35,8 @@ canvas {
     position: absolute;
 }
 
-#panels {
-    top: 6em;
+#controls {
+    top: 2em;
     left: 1em;
     position: absolute;
     width: 10%;
@@ -60,12 +60,18 @@ canvas {
     background-color: white;
 }
 
-#controls, .atom-display {
+#togglable-controls, .atom-display {
     border: 1px solid black;
     padding: 10px;
 }
 
-#atom-display h3 {
+#display {
+    position: absolute;
+    right: 1em;
+    top: 1em;
+}
+
+.atom-display h3 {
     text-align: center;
 }
 
