--- a/app/style.css
+++ b/app/style.css
@@ -60,8 +60,17 @@ canvas {
     background-color: white;
 }
 
+.atom-display {
+    line-height: 0.5em;
+    padding: 0 10px;
+
+}
+
 #togglable-controls, .atom-display {
     border: 1px solid black;
+}
+
+#togglable-controls {
     padding: 10px;
 }
 
