--- a/app/style.css
+++ b/app/style.css
@@ -69,7 +69,7 @@ canvas {
 #sim-controls-play {
     position: absolute;
     left: 50%;
-    margin-left: -25px;
+    margin-left: -125px;
     bottom: 3em;
 }
 
@@ -85,11 +85,11 @@ canvas {
     width: 1em;
 }
 
-#next-instance {
+#next-instance, #previous-instance {
     padding-bottom: .3em;
 }
 
-#next-instance span {
+#next-instance:first-letter, #previous-instance:first-letter {
     letter-spacing: -.3em;
 }
 
