Moved toggle button into corner of controls.

--- a/app/style.css
+++ b/app/style.css
@@ -101,12 +101,17 @@ canvas {
 
 #sim-controls-other {
     padding: 10px;
+    padding-top: 30px;
 }
 
 #display {
     position: absolute;
     right: 1em;
     top: 1em;
+}
+
+#toggle-controls {
+    position: absolute;
 }
 
 .atom-display h3 {
