--- a/app/style.css
+++ b/app/style.css
@@ -36,6 +36,10 @@ canvas {
     position: absolute;
 }
 
+button {
+
+}
+
 #toggle-headers-and-panels {
     position: absolute;
 }
@@ -56,10 +60,6 @@ canvas {
     right: 11em;
     color: red;
     font-size: 1.4em;
-}
-
-.panel {
-    background-color: white;
 }
 
 .atom-display {
@@ -94,13 +94,8 @@ canvas {
     letter-spacing: -.3em;
 }
 
-#sim-controls-other, .atom-display {
+.atom-display {
     border: 1px solid black;
-}
-
-#sim-controls-other {
-    padding: 10px;
-    margin: 0px;
 }
 
 #sim-controls-other button {
@@ -111,6 +106,7 @@ canvas {
     position: absolute;
     right: 1em;
     top: 1em;
+    background-color: white;
 }
 
 .atom-display h3 {
@@ -129,6 +125,7 @@ canvas {
     left: 50%;
     margin-left: -80px;
     border: 1px solid black;
+    background-color: white;
 }
 
 #shortcuts h3 {
