Fixed the size of the buttons in the menu so that they don't change when the text changes.

--- a/app/style.css
+++ b/app/style.css
@@ -37,7 +37,7 @@ canvas {
 }
 
 button {
-
+    background-color: #eaeaea;
 }
 
 #toggle-headers-and-panels {
@@ -115,6 +115,15 @@ button {
 
 .hidden {
     display: none;
+}
+
+/* Menu */
+#toggle-all {
+    width: 4em;
+}
+
+#toggle-shortcuts {
+    width: 9em;
 }
 
 /* Shortcuts */
