--- a/app/style.css
+++ b/app/style.css
@@ -68,12 +68,15 @@ html, body {
 }
 
 canvas {
-    border: 1px solid black;
     position: absolute;
 }
 
 button, div {
     background-color: #ECE389;
+}
+
+button {
+    border: 1px solid black;
 }
 
 #input-window {
@@ -99,7 +102,9 @@ button, div {
 }
 
 #sim-controls-other {
+    margin: 1em;
     background-color: #FCF9F0;
+    border-radius: 20em;
 }
 
 #sim-controls-other button {
