--- a/app/style.css
+++ b/app/style.css
@@ -98,7 +98,7 @@ button {
 
 #top-left {
     position: absolute;
-    background-color: #FCF9F0;
+    background-color: transparent;
 }
 
 #sim-controls-other {
@@ -186,12 +186,10 @@ h2 {
     border: none;
 }
 
-
-
 /* Menu */
 
 #menu {
-    background-color: #FCF9F0;
+    background-color: inherit;
 }
 
 #toggle-all {
