--- a/app/style.css
+++ b/app/style.css
@@ -73,6 +73,14 @@ canvas {
 
 button {
     border: 0px;
+    transition: opacity .2s ease-out;
+    -moz-transition: opacity .2s ease-out;
+    -webkit-transition: opacity .2s ease-out;
+    -o-transition: opacity .2s ease-out;
+}
+
+button:hover {
+    opacity: 0.5;
 }
 
 button, .text-content {
@@ -185,10 +193,6 @@ h2 {
 #display div:first-child {
     border-top: 0px;
 }
-
-#display {}
-
-
 
 .hidden {
     display: none;
